# ML22-hypertune

./: .gitignore  Makefile  hypertest.py  hypertune.py  hypertune_example.py  pyproject.toml
models/ray/train_2022-12-25_10-33-08/: experiment_state-2022-12-25_10-33-08.json  search_gen_state-2022-12-25_10-33-08.json  searcher-state-2022-12-25_10-33-08.pkl
models/ray/train_2022-12-25_10-33-08/train_5903e142_2_data_dir=home_azureuser_ML22_ML22-hypertune_data_external_imdb-dataset,dropout=0.1852,hidden_size=124,input_size=_2022-12-25_10-33-12/: params.json  params.pkl
models/ray/train_2022-12-25_10-33-08/train_886c0853_3_data_dir=home_azureuser_ML22_ML22-hypertune_data_external_imdb-dataset,dropout=0.2464,hidden_size=124,input_size=_2022-12-25_10-33-13/: params.json  params.pkl
models/ray/train_2022-12-25_10-33-08/train_d5cb2af4_4_data_dir=home_azureuser_ML22_ML22-hypertune_data_external_imdb-dataset,dropout=0.1205,hidden_size=92,input_size=3_2022-12-25_10-33-13/: params.json  params.pkl
models/ray/train_2022-12-25_10-33-08/train_f076fbd0_1_data_dir=home_azureuser_ML22_ML22-hypertune_data_external_imdb-dataset,dropout=0.1759,hidden_size=27,input_size=3_2022-12-25_10-33-08/: error.pkl  error.txt  params.json  params.pkl
notebooks/: hypertune_results.ipynb  tests.ipynb
src/: settings.py
src/data/: data_tools.py  make_dataset.py
src/models/: rnn_models.py  train_model.py
(+2 files in other folders)
