[tool.poetry]
name = "ml22-hypertune"
version = "0.1.0"
description = ""
authors = ["Pascal van der Kley <pascal@vdkley.nl>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
ray = "^2.2.0"
torch = "^1.13.1"
filelock = "^3.8.2"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
mypy = "^0.991"
pytest = "^7.2.0"
pep8-naming = "^0.13.3"
flake8-annotations = "^2.9.1"
hypothesis = "^6.61.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
